# JustHireMe

./: .gitignore  .graphifyignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXECUTION.md  FIX.md  NOTICE  README.md  ROADMAP.md  SUPPORT.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
backend/: application_packets.py  backend.spec  force_model.py  llm.py  main.py  mcp_server.py  packet_cli.py  pyproject.toml  requirements.txt  run_diagnostics.py  test_live_fire.py  update_settings.py
backend/agents/: free_scout.py  generator.py  scout.py  x_scout.py
backend/api/: app.py  auth.py  dependencies.py  rate_limit.py  scheduler.py  startup_validation.py  websocket.py
backend/api/routers/: automation.py  diagnostics.py  discovery.py  events.py  generation.py  health.py  ingestion.py  internal.py  leads.py  learning.py  misc.py  notifications.py  profile.py  runtime.py  settings.py  templates.py
backend/automation/: actuator.py  free_scout.py  scout.py  selectors.py  service.py  source_adapters.py  x_scout.py
backend/contracts/: __init__.py  automation.py  common.py  discovery.py  events.py  generation.py  graph.py  jobs.py  profile.py  ranking.py  services.py
backend/core/: company_seeds.py  config.py  generation_readiness.py  occupations.py  paths.py  telemetry.py  types.py  url_guard.py  version.py
backend/data/: feedback.py  maintenance.py  repository.py
backend/data/graph/: connection.py  profile.py  profile_base.py  profile_correlations.py  profile_deletions.py  profile_mutations.py  profile_vectors.py
backend/data/sqlite/: connection.py  events.py  leads.py  notifications.py  settings.py
backend/data/vector/: connection.py  embeddings.py  runtime.py
backend/db/: client.py
backend/discovery/: lead_intel.py  maintenance.py  normalizer.py  quality_gate.py  query_gen.py  service.py  targets.py
backend/discovery/sources/: __init__.py  aggregator.py  apify.py  ats.py  common.py  custom.py  github_jobs.py  hackernews.py  net.py  reddit.py  rss.py  web.py  x_twitter.py
backend/education/: __init__.py  cache.py  city_extractor.py  domain_classifier.py  matcher.py  mon_master_client.py
backend/evals/: README.md  __init__.py  harness.py
backend/evals/cases/: business.jsonl  cross_field.jsonl  discrimination.jsonl  healthcare.jsonl  seniority.jsonl  tech.jsonl  trades.jsonl
backend/gateway/: __init__.py  clients.py  discovery_config.py  events.py  jobs.py  lead_adapters.py  supervisor.py
backend/gateway/clients/: __init__.py  automation.py  base.py  discovery.py  generation.py  graph.py  profile.py  ranking.py
backend/gateway/discovery_sources/: __init__.py  alternance_filter.py  la_bonne_alternance.py  welcome_to_the_jungle.py
backend/generation/: contact_lookup.py  generator.py  pdf_renderer.py
backend/generation/generators/: base.py  cover_letter.py  drafting.py  keywords.py  package.py  resume.py
backend/graph/: __init__.py
backend/graph_service/: __init__.py  helpers.py  stats.py
backend/help/: service.py
backend/learning/: __init__.py  insights.py
backend/llm/: client.py  model_catalog.py  models_snapshot.json  subscription_cli.py
backend/models/: schema.py
backend/notifications/: __init__.py  email.py  manager.py  whatsapp.py
backend/profile/: github_ingestor.py  ingest_documents.py  ingest_parse.py  ingestor.py  linkedin_parser.py  normalization.py  portfolio_crawl.py  portfolio_extract.py  portfolio_ingestor.py  portfolio_text.py  service.py  url_guard.py
backend/profiles/: __init__.py  adnane.json
backend/ranking/: evaluator.py  feedback_ranker.py  feedback_semantic.py  scoring_engine.py  semantic.py  service.py
backend/ranking/criteria/: __init__.py  evidence.py  seniority_fit.py  stack_coverage.py
backend/scripts/: e2e_test.py  seed_profile.py  send_notifications.py
backend/services/: __init__.py  apps.py  auth.py
backend/services/automation/: __init__.py  app.py  dependencies.py  repository.py  router.py
backend/services/discovery/: __init__.py  app.py  dependencies.py  repository.py  router.py
backend/services/generation/: __init__.py  app.py  dependencies.py  repository.py  router.py
backend/services/graph/: __init__.py  app.py  repository.py  router.py
backend/services/profile/: __init__.py  app.py  dependencies.py  repository.py  router.py
backend/services/ranking/: __init__.py  app.py  dependencies.py  repository.py  router.py
backend/tests/: conftest.py  regression_support.py  test_actuator_vision_safety.py  test_api.py  test_apify_actor_validation.py  test_app_data_paths.py  test_browser_runtime.py  test_codex_account.py  test_concurrent_profile_delete.py  test_dedup_canonical.py  test_diagnostics.py  test_discovery_backbone.py  test_discovery_correctness_fixes.py  test_discovery_service.py  test_discovery_sources.py  test_e2e_profile_score_generate.py  test_education_matcher.py  test_embedding_autowarm.py  test_embedding_dims.py  test_embedding_honesty.py  test_embeddings.py  test_explicit_min_score_zero.py  test_extraction_quality_live.py  test_feedback_model.py  test_feedback_recompute.py  test_feedback_relearn_coalesce.py  test_feedback_semantic.py  test_field_location_agnostic.py  test_foundation_modules.py  test_generation_generators.py  test_github_ingestor.py  test_graph.py  test_import_boundaries.py  test_ingestion_dedup.py  test_ingestion_hardening.py  test_ingestor_documents.py  test_job_preferences.py  test_keyless_multisource_scan.py  test_lead_hygiene.py  test_learning_insights.py  (+52 more)
dashboard/: index.html  package-lock.json  package.json  vite.config.js
docs/: FEATURE_TEST_MATRIX.md  INSTALL_MACOS.md  MAINTAINER_RELEASE_CHECKLIST.md  source-adapters.md  windows-release.md
scripts/: build-sidecar-macos.sh  build-sidecar.mjs  build-sidecar.sh  package-runtime-pack.mjs  package-vector-runtime.mjs  run-parallel.mjs  runtime-pack-version.mjs  setup-local-runtime.mjs  smoke-sidecar.mjs  smoke-windows-update.mjs  verify-updater-release.mjs  version.mjs
src/: App.tsx  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+97 files in other folders)
