[project]
name = "backend"
version = "1.0.0"
description = "FastAPI sidecar for JustHireMe's local-first job intelligence workbench"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
    "anthropic>=0.49.0",
    "openai>=2.37.0",
    "instructor>=1.3.0",
    "kuzu>=0.11.3",
    "lancedb>=0.30.2",
    "langchain-core>=1.4.0",
    "langgraph>=0.2.0",
    "sentence-transformers>=5.5.0",
    "pypdf>=6.11.0",
    "playwright>=1.44.0",
    "html2text>=2024.2.26",
    "httpx>=0.28.1",
    "fpdf2>=2.8.7",
    "markdown>=3.10.2",
    "apscheduler>=3.11.2",
    "python-multipart>=0.0.27",
    "tenacity>=9.1.4",
    "langsmith>=0.8.0",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
markers = [
    "unit: fast tests with no external I/O",
    "integration: tests that exercise storage, API wiring, or other cross-module behavior",
    "regression: tests that protect previously fixed behavior",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
no_strict_optional = false
