[project]
name = "backend"
version = "1.0.17"
description = "FastAPI sidecar for JustHireMe's local-first job intelligence workbench"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
    "anthropic~=0.102.0",
    "openai~=2.37.0",
    "instructor~=1.15.0",
    "kuzu~=0.11.3",
    "lancedb~=0.30.2",
    "langchain-core~=1.4.0",
    "langgraph~=1.2.0",
    "sentence-transformers~=5.5.0",
    "pypdf>=6.11.0",
    "playwright>=1.44.0",
    "html2text>=2024.2.26",
    "httpx>=0.28.1",
    "fpdf2>=2.8.7",
    "markdown>=3.10.2",
    "apscheduler>=3.11.2",
    "python-multipart>=0.0.27",
    "tenacity>=9.1.4",
    "langsmith>=0.8.0",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
markers = [
    "unit: fast tests with no external I/O",
    "integration: tests that exercise storage, API wiring, or other cross-module behavior",
    "regression: tests that protect previously fixed behavior",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
no_strict_optional = false
check_untyped_defs = true
warn_return_any = true
exclude = [
    "^tests/",
    "^test_.*\\.py$",
    "^run_diagnostics\\.py$",
    "^force_model\\.py$",
]
# Full-project mypy is now enforced in CI. These legacy error families are
# intentionally suppressed while typed module-by-module cleanup continues.
disable_error_code = [
    "arg-type",
    "assignment",
    "call-overload",
    "dict-item",
    "index",
    "misc",
    "no-any-return",
    "no-redef",
    "operator",
    "type-var",
    "unused-ignore",
    "var-annotated",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",   # FastAPI Depends is intentionally used in endpoint signatures.
    "E501",   # Existing user-facing strings/fixtures still exceed line length.
    "I001",   # Import sorting will be ratcheted after the stability pass.
    "RUF001", # Text normalization and fixtures intentionally include Unicode punctuation variants.
    "RUF100", # Many regression tests rely on star-import support fixtures.
    "SIM105", # Keep simple cleanup try/except blocks readable in tests/utilities.
    "UP017",  # Keep timezone.utc style until datetime.UTC support is ratcheted.
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401", "F403", "F405", "RUF100"]
"test_*.py" = ["F401", "F403", "F405", "RUF100"]
"generation/pdf_renderer.py" = ["F601"]
