[project]
name = "backend"
version = "1.3.0"
description = "FastAPI sidecar for JustHireMe's local-first job intelligence workbench"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
    "anthropic~=0.116.0",
    "openai~=2.44.0",
    "instructor~=1.15.4",
    "kuzu~=0.11.3",
    "lancedb~=0.34.0",
    "langchain-core~=1.4.0",
    "langgraph~=1.2.0",
    # Embedding runtime: embeddings.py imports these directly (ONNX MiniLM + tokenizer
    # + model download). Declared explicitly instead of relying on the unused
    # `sentence-transformers`, which only pulled in torch/scikit-learn/scipy (and the
    # torch CVE) without ever being imported.
    "onnxruntime~=1.27.0",
    "tokenizers>=0.20.0",
    "huggingface-hub>=0.27.0",
    "pypdf>=6.14.2",
    "playwright>=1.60.0",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "fpdf2>=2.8.7",
    "markdown>=3.10.2",
    "apscheduler>=3.11.2",
    "python-multipart>=0.0.32",
    "tenacity>=9.1.4",
    "defusedxml>=0.7.1",
    "langsmith>=0.9.6",
    "urllib3>=2.7.0",
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
markers = [
    "unit: fast tests with no external I/O",
    "integration: tests that exercise storage, API wiring, or other cross-module behavior",
    "regression: tests that protect previously fixed behavior",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
no_strict_optional = false
check_untyped_defs = true
warn_return_any = true
exclude = [
    "^tests/",
    "^test_.*\\.py$",
]
# Full-project mypy is now enforced in CI. These legacy error families are
# intentionally suppressed while typed module-by-module cleanup continues.
disable_error_code = [
    "arg-type",
    "assignment",
    "call-overload",
    "dict-item",
    "index",
    "misc",
    "no-any-return",
    "no-redef",
    "operator",
    "type-var",
    "unused-ignore",
    "var-annotated",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",   # FastAPI Depends is intentionally used in endpoint signatures.
    "E501",   # Existing user-facing strings/fixtures still exceed line length.
    "I001",   # Import sorting will be ratcheted after the stability pass.
    "RUF001", # Text normalization and fixtures intentionally include Unicode punctuation variants.
    "RUF100", # Many regression tests rely on star-import support fixtures.
    "SIM105", # Keep simple cleanup try/except blocks readable in tests/utilities.
    "UP017",  # Keep timezone.utc style until datetime.UTC support is ratcheted.
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401", "F403", "F405", "RUF100"]
"test_*.py" = ["F401", "F403", "F405", "RUF100"]
"generation/pdf_renderer.py" = ["F601"]
